[gd_scene load_steps=3 format=3 uid="uid://b4pie8525s0ob"]

[ext_resource type="Script" path="res://Nowe/scrypty/wyposażenie.gd" id="1_m681a"]
[ext_resource type="Texture2D" uid="uid://b0uvtrq2ijfaf" path="res://grafiki/strm_maa_oczy_wyciete.png" id="2_owift"]

[node name="Wyposażenie" type="Node2D"]
script = ExtResource("1_m681a")

[node name="StrmMaaOczyWyciete" type="Sprite2D" parent="."]
position = Vector2(265, 364)
texture = ExtResource("2_owift")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 1
offset_left = 702.0
offset_top = 59.0
offset_right = 1152.0
offset_bottom = 659.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Głowa" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Ręka1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="Tors" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="Ręka2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="Nogi" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="Stopy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nic"

[node name="Button" type="Button" parent="."]
offset_left = 1305.0
offset_top = 689.0
offset_right = 1446.0
offset_bottom = 750.0
text = "powrut"

[connection signal="pressed" from="VBoxContainer/Głowa" to="." method="_on_głowa_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Ręka1" to="." method="_on_ręka_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Tors" to="." method="_on_tors_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Ręka2" to="." method="_on_ręka_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Nogi" to="." method="_on_nogi_pressed"]
[connection signal="pressed" from="VBoxContainer/Stopy" to="." method="_on_stopy_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
